# data-contract-enforcer

./: .gitignore  DOMAIN_NOTES.md  INSTALL.md  README.md  RUNBOOK.md  batch.yaml  pyproject.toml  thursday_report.md
.claude/: settings.local.json
.github/workflows/: validate.yml
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  baseline_manager.py  batch_runner.py  config.py  evolution_gate.py  generator.py  log_config.py  quarantine_manager.py  remediation_generator.py  remediation_rules.yaml  report_generator.py  rubric_report.py  runner.py  schema_analyzer.py
enforcer_report/: final_report.json  report_data.json  report_data_actual.json  week3_violated.json
generated_contracts/: langsmith-traces.yaml  langsmith-traces_dbt_schema.yml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt_schema.yml  week4-lineage-graph.yaml  week4-lineage-graph_dbt_schema.yml  week5-event-store.yaml  week5-event-store_dbt_schema.yml
outputs/traces/: automaton_auditor_week2_langsmith_tree.json  automaton_auditor_week2_langsmith_tree.jsonl
outputs/week2/: verdicts.jsonl
outputs/week4/: lineage_snapshots.jsonl
outputs/week5/: events.jsonl
quarantine/: prompt_schema_violations.jsonl
schema_snapshots/: baselines.json  embedding_baseline.json
schema_snapshots/langsmith-traces/: 20260402T201625Z.yaml
schema_snapshots/week3-document-refinery-extractions/: 20260401T162149Z.yaml  20260401T163032Z.yaml  20260401T163552Z.yaml  20260403T073848Z.yaml
scripts/: batch_extract_week3.py  generate_week4_contract.py  generate_week5_contract.py  install_hooks.sh  migrate_week2.py  migrate_week3.py  migrate_week4.py  migrate_week5.py
tests/: test_ai_extensions.py  test_attributor.py  test_baseline_manager.py  test_batch_extract_week3.py  test_drift_checks.py  test_integration.py  test_migrate_week2.py  test_migrate_week3.py  test_remediation_generator.py  test_report_generator.py  test_runner_adversarial.py  test_runner_enforcement.py  test_runner_referential_integrity.py  test_runner_schema_evolution.py  test_schema_analyzer.py  test_schema_evolution_gate.py
validation_reports/: langsmith-traces.json  schema_evolution_actual.json  week2_ai_actual.json  week3_actual.json  week3_baseline.json  week3_baseline_refresh.json  week4_actual.json  week4_baseline.json  week4_baseline_refresh.json  week5-event-store-schema-evolution-contract.yaml  week5-event-store-schema-evolution-report.json  week5_actual.json  week5_baseline.json  week5_baseline_refresh.json
violation_log/: violations.jsonl
(+6 files in other folders)
